unpackaged/main/default/objects/ContractLineItem/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>