unpackaged/main/default/objects/ContractLineItem/fields/CW_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>CW_Product_Description__c</fullName>
    <label>CW Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>