unpackaged/main/default/objects/ContractLineItem/fields/CW_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>CW_Product_ID__c</fullName>
    <label>CW Product ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>